--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="col-12 mt-5 mb-4 align-self-center">
                 <p class="display-1 title"><img class="align-items-center mb-2"src="imgs/rei.gif" alt="rei" id="rei"> AniFind 🔎</p> 
                 <p class="h5 mt-4 title subtitle mb-3">Search for an Anime based on rank.</p>
-                <p class="mt-2 p-2 h6 subhead">A Front-End App by <a href="https://github.com/ultimatechrisu/" id="subhead"> ultimatechrisu <img id="git" src="imgs/github.svg" height="22.14" width="30" alt=""></a></p>
+                <p class="mt-2 p-2 h6 subhead">A Front-End App by <a href="https://github.com/ultimatechrisu/AniFind" id="subhead"> ultimatechrisu <img id="git" src="imgs/github.svg" height="22.14" width="30" alt=""></a></p>
                 <button class="btn btn-info mt-3" id="topAnime-btn">See Top 10 Anime</button>
 
             </div>
