--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <!-- Credit team-->
     <div class="text-center credit w-100">
         <h3 class="mt-5 mb-5 rank">SEARCH ANIME BASED ON RANK</h3>
-        <p class="h4 mb-2 git">Front-End JS by <a href="https://github.com/ultimatechrisu" id="subhead"> ultimatechrisu <img id="git" src="imgs/github.svg" height="22.14" width="30" alt=""></a></p>
+        <p class="h4 mb-2 git">Front-End JS by <a href="https://github.com/developedbychris" id="subhead"> ultimatechrisu <img id="git" src="imgs/github.svg" height="22.14" width="30" alt=""></a></p>
         <p class="h5 mb-5 git">UI Design Developed by <a href="https://github.com/NirajD10" id="subhead"> NirajD10 <img id="git" src="imgs/github.svg" height="22.14" width="30" alt=""></a></p>
     </div>
     
